- Fixed automatic navbar spacing with refs - redid submit logic to allow for db support

--- a/src/client/static/styles.css
+++ b/src/client/static/styles.css
@@ -42,7 +42,7 @@ body {
     background: var(--background);
     color: var(--text);
     margin: 0 auto;
-    padding: 1rem;
+    /* padding: 1rem; */
     font-weight: 400;
     line-height: 1.3;
 }
@@ -50,8 +50,13 @@ body::-webkit-scrollbar {
     display: none; /* for Chrome, Safari, and Opera */
 }
 
+#root {
+    margin: 0;
+}
+
 h1, h2, h3, h4, h5 {
     /* font-family: 'Poppins'; */
+    margin-top: 0;
     font-weight: 700;
 }
 
@@ -72,11 +77,11 @@ small {font-size: 0.750rem; /* 12px */}
 }
 
 /* navbar stuff */
-.navbar {
+#navbar {
     /* @media screen and (max-width: 1000px) */
     font-size: var(--nav-font);
     flex-wrap: wrap;
-    padding: 10px 20px;
+    /* padding: 10px 20px; */
     top: 0;
     left: 0;
     gap: 3em;
@@ -85,14 +90,14 @@ small {font-size: 0.750rem; /* 12px */}
     flex-direction: row;
     justify-content: space-between;
     width: 100%;
-    padding: 3px 8%;
+    padding: 2px 8%;
     z-index: 500;
     align-items: center;
     position: fixed;
     background-color: var(--background);
     border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
-.navbar .logo {
+#navbar .logo {
     font-size: xx-large;
     display: flex;
     flex-direction: row;
@@ -103,7 +108,7 @@ small {font-size: 0.750rem; /* 12px */}
     font-weight: 700;
     margin: 0;
 }
-.navbar .logo a img {
+#navbar .logo a img {
     margin: 10px;
     width:75px;
     /* max-width: 7vw; */
@@ -112,7 +117,7 @@ small {font-size: 0.750rem; /* 12px */}
     transition-property: transform, box-shadow;
     transition-duration: .6s;
 }
-.navbar .logo a img:hover {
+#navbar .logo a img:hover {
     transform: scale(1.09);
     box-shadow: 0px 0px 3px 3px #cccccc2c;
 }
